# kmeans

./: CMakeLists.txt  LICENSE  README.md  build.sh  cmake_test.sh  main.c  random.c  runnr.conf  runnr.sh
src/include/: data_point.h  logerr.h  setup_matrix.h
src/kmeans/: distance.h  kmeans.h  print_cluster.h  random.h
src/shared/: shared.h
